styles.css
body {
    background-color: #457B9D;
    color: #fff;
    margin: 0;
    font-weight: 300;
    box-sizing: border-box;
    font-family: 'Work Sans', sans-serif;
    font-size: 1.5rem;
    
}

.all-tasks {
    padding: 0.5em 2em;
}


.title {
    font-size: calc(6vw + 2rem);
    font-weight: 900;
    color: rgba(0, 0, 0, 0.2);
    letter-spacing: -2px;
    margin: 0 0.5em 0 0.5em;
}

.task-list {
    font-size: 1.2rem;
    line-height: 1.7;
    list-style: circle;
    padding-left: 1.1em;
}

.list-name {
    cursor: pointer;
}

.list-name:hover {
    opacity: 0.7;
}

form {
    display: flex;
}

.btn {
    cursor: pointer;
    background: 0;
    border: 0;
    padding: 0;
    color: inherit;
}

.btn.create {
    font-size: 1.5rem;
    font-weight: 900;
    margin-right: 0.25em;
    transition: opacity 250ms ease-in;
}

.btn.create:hover {
    opacity: 0.7;
}

.btn.delete {
    font-size: 1rem;
    letter-spacing: 0.6px;
    transition: color 200ms;
}

.btn.delete:hover {
    color: rgb(135, 30, 30);
    border-bottom: 1px solid rgb(135, 30, 30);
}


.new {
    background: transparent;
    border: 0;
    color: inherit;
    border-bottom: 1px solid currentColor;
    font-size: inherit;
    outline: none;
    margin-bottom: 0;
    padding: 0.25em;

    transition: border-bottom 250ms ease-in;
    order: 2;
}

.new::placeholder {
    color: #fff;
    opacity: 0.5;
}


.new:focus {
    border-bottom-width: 3px;
}

.new:focus::placeholder {
    opacity: 0.2;
}

.new.list {
    font-size: 1.1rem;
    font-weight: 300;
}


.active-list {
    font-weight: 900;
    letter-spacing: 1px;
}

.todo-list {
    background: rgb(242, 242, 242);
    color: rgb(42, 42, 42);
    margin: 2em 2em;

    --spacer: 2rem;
}

.todo-list .new::placeholder {
    color: rgb(42, 42, 42);
    opacity: 0.5;
}

.todo-list .new:focus::placeholder {
    opacity: 0.2;
}

.todo-header {
    background: #e4e4e4;
    padding: var(--spacer);
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.list-title {
    margin: 0 1em 0 0;
}

.task-count {
    margin: 0;
    font-size: 1rem;
}

.todo-body {
    padding: var(--spacer);
    position: relative;
}

[type= "checkbox"] {
    opacity: 0;
    position: absolute;
}

.task label {
    display: flex;
    align-items: center;
    margin-bottom: 1.25em;
    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
    padding-bottom: 0.5em;
}

.task {
    position: relative;
}

.task::after {
    content: "";
    position: absolute;
    right: 0;
    left: 0;
    bottom: -0.5em;
    height: 2px;

}

.custom-checkbox {
    display: inline-block;
    width: 0.6em;
    height: 0.6em;
    margin-right: 0.6em;
    cursor: pointer;
    border: 2px solid currentColor;
    border-radius: 50%;
    transform: scale(1);
    transition: transform 300ms ease-in-out;
}

.task:hover .custom-checkbox, 
[type= "checkbox"]:focus + label .custom-checkbox {
    transform: scale(1.1);
    color: #457B9D;
}

[type= "checkbox"]:checked + label .custom-checkbox {
    background:#457B9D;
    border-color: #457B9D;
    box-shadow: inset 0 0 0px 3px #fff;
}

[type= "checkbox"]:checked + label {
    opacity: 0.5;
}

.task label::after {
    content: '';
    position: absolute;
    left: 0;
    right: 0;
    left: 1.2em;
    right: 1.5em;
    height: 3px;
    background: currentColor;
    transform: scaleX(0);
    transform-origin: left;
    transition: transform 250ms ease-in-out;
}

[type= "checkbox"]:checked + label::after {
    transform: scaleX(1);
}

.delete-btns {
    display: flex;
    justify-content: space-evenly;
    position: absolute;
    width: 100%;
    left: 0;
    bottom: -50px;
    color: #e4e4e4;
    margin-bottom: 1em;
}




@media screen and (min-width: 700px){
    body {
        display: grid;
        grid: 
        "header header header header" auto
        "......  lists active ......" auto /
        1fr minmax(100px, 300px) minmax(250px, 500px) 1fr;
    
    }
    
    .title {
        grid-area: header;
    }
    
    .all-tasks {
        grid-area: lists;
    }
    
    .todo-list {
        grid-area: active;
    }
}

@media screen and (min-width: 1000px) {
    .title {
        margin: 0;
        text-align: center;
    }

    .all-tasks {
        margin-right: 2em;
    }

    .todo-list {
        margin-left: 2em;
    }
}

